// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Slider demos > demo: Basic 1`] = `
"<div style="max-width: 400px;">
  <div class="ant-slider">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track" style="left: 0%; width: 30%;"></div><!-- Steps/dots -->
    <!--v-if-->
    <!-- Marks -->
    <!--v-if-->
    <!-- Handle(s) -->
    <div class="ant-slider-handle" style="left: 30%;" role="slider" aria-valuemin="0" aria-valuemax="100" aria-valuenow="30" tabindex="0"></div>
  </div>
  <div class="ant-slider">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track" style="left: 0%; width: 30%;"></div><!-- Steps/dots -->
    <!--v-if-->
    <!-- Marks -->
    <!--v-if-->
    <!-- Handle(s) -->
    <div class="ant-slider-handle" style="left: 30%;" role="slider" aria-valuemin="0" aria-valuemax="100" aria-valuenow="30" tabindex="0"></div>
  </div>
  <div style="margin-top: 16px;"> Disabled: <input type="checkbox"></div>
</div>"
`;

exports[`Slider demos > demo: Disabled 1`] = `
"<div style="max-width: 400px;">
  <div class="ant-slider ant-slider-disabled">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track" style="left: 0%; width: 30%;"></div><!-- Steps/dots -->
    <!--v-if-->
    <!-- Marks -->
    <!--v-if-->
    <!-- Handle(s) -->
    <div class="ant-slider-handle" style="left: 30%;" role="slider" aria-valuemin="0" aria-valuemax="100" aria-valuenow="30" aria-disabled="true" tabindex="-1"></div>
  </div>
  <div class="ant-slider ant-slider-disabled">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track" style="left: 20%; width: 30%;"></div><!-- Steps/dots -->
    <!--v-if-->
    <!-- Marks -->
    <!--v-if-->
    <!-- Handle(s) -->
    <div class="ant-slider-handle" style="left: 20%;" role="slider" aria-valuemin="0" aria-valuemax="100" aria-valuenow="20" aria-disabled="true" tabindex="-1"></div>
    <div class="ant-slider-handle" style="left: 50%;" role="slider" aria-valuemin="0" aria-valuemax="100" aria-valuenow="50" aria-disabled="true" tabindex="-1"></div>
  </div>
</div>"
`;

exports[`Slider demos > demo: Marks 1`] = `
"<div style="max-width: 400px;">
  <h4>Slider with marks</h4>
  <div class="ant-slider ant-slider-with-marks">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track" style="left: 0%; width: 37%;"></div><!-- Steps/dots -->
    <div class="ant-slider-step"><span class="ant-slider-dot ant-slider-dot-active" style="left: 0%;"></span><span class="ant-slider-dot ant-slider-dot-active" style="left: 26%;"></span><span class="ant-slider-dot ant-slider-dot-active" style="left: 37%;"></span><span class="ant-slider-dot" style="left: 100%;"></span></div><!-- Marks -->
    <div class="ant-slider-mark"><span class="ant-slider-mark-text ant-slider-mark-text-active" style="left: 0%;">0°C</span><span class="ant-slider-mark-text ant-slider-mark-text-active" style="left: 26%;">26°C</span><span class="ant-slider-mark-text ant-slider-mark-text-active" style="left: 37%;">37°C</span><span class="ant-slider-mark-text" style="color: rgb(255, 85, 0); left: 100%;">100°C</span></div><!-- Handle(s) -->
    <div class="ant-slider-handle" style="left: 37%;" role="slider" aria-valuemin="0" aria-valuemax="100" aria-valuenow="37" tabindex="0"></div>
  </div>
  <h4 style="margin-top: 48px;">included=false</h4>
  <div class="ant-slider ant-slider-with-marks">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track" style="display: none;"></div><!-- Steps/dots -->
    <div class="ant-slider-step"><span class="ant-slider-dot" style="left: 0%;"></span><span class="ant-slider-dot" style="left: 26%;"></span><span class="ant-slider-dot" style="left: 37%;"></span><span class="ant-slider-dot" style="left: 100%;"></span></div><!-- Marks -->
    <div class="ant-slider-mark"><span class="ant-slider-mark-text" style="left: 0%;">0°C</span><span class="ant-slider-mark-text" style="left: 26%;">26°C</span><span class="ant-slider-mark-text" style="left: 37%;">37°C</span><span class="ant-slider-mark-text" style="color: rgb(255, 85, 0); left: 100%;">100°C</span></div><!-- Handle(s) -->
    <div class="ant-slider-handle" style="left: 37%;" role="slider" aria-valuemin="0" aria-valuemax="100" aria-valuenow="37" tabindex="0"></div>
  </div>
  <h4 style="margin-top: 48px;">marks &amp; step</h4>
  <div class="ant-slider ant-slider-with-marks">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track" style="left: 0%; width: 37%;"></div><!-- Steps/dots -->
    <div class="ant-slider-step"><span class="ant-slider-dot ant-slider-dot-active" style="left: 0%;"></span><span class="ant-slider-dot ant-slider-dot-active" style="left: 26%;"></span><span class="ant-slider-dot ant-slider-dot-active" style="left: 37%;"></span><span class="ant-slider-dot" style="left: 100%;"></span></div><!-- Marks -->
    <div class="ant-slider-mark"><span class="ant-slider-mark-text ant-slider-mark-text-active" style="left: 0%;">0°C</span><span class="ant-slider-mark-text ant-slider-mark-text-active" style="left: 26%;">26°C</span><span class="ant-slider-mark-text ant-slider-mark-text-active" style="left: 37%;">37°C</span><span class="ant-slider-mark-text" style="color: rgb(255, 85, 0); left: 100%;">100°C</span></div><!-- Handle(s) -->
    <div class="ant-slider-handle" style="left: 37%;" role="slider" aria-valuemin="0" aria-valuemax="100" aria-valuenow="37" tabindex="0"></div>
  </div>
</div>"
`;

exports[`Slider demos > demo: Range 1`] = `
"<div style="max-width: 400px;">
  <div class="ant-slider">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track" style="left: 20%; width: 30%;"></div><!-- Steps/dots -->
    <!--v-if-->
    <!-- Marks -->
    <!--v-if-->
    <!-- Handle(s) -->
    <div class="ant-slider-handle" style="left: 20%;" role="slider" aria-valuemin="0" aria-valuemax="100" aria-valuenow="20" tabindex="0"></div>
    <div class="ant-slider-handle" style="left: 50%;" role="slider" aria-valuemin="0" aria-valuemax="100" aria-valuenow="50" tabindex="0"></div>
  </div>
  <p>Value: [
    20,
    50
    ]</p>
</div>"
`;

exports[`Slider demos > demo: Vertical 1`] = `
"<div style="display: flex; gap: 48px; height: 300px;">
  <div class="ant-slider ant-slider-vertical">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track" style="bottom: 0%; height: 30%;"></div><!-- Steps/dots -->
    <!--v-if-->
    <!-- Marks -->
    <!--v-if-->
    <!-- Handle(s) -->
    <div class="ant-slider-handle" style="bottom: 30%;" role="slider" aria-valuemin="0" aria-valuemax="100" aria-valuenow="30" tabindex="0"></div>
  </div>
  <div class="ant-slider ant-slider-vertical">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track" style="bottom: 20%; height: 30%;"></div><!-- Steps/dots -->
    <!--v-if-->
    <!-- Marks -->
    <!--v-if-->
    <!-- Handle(s) -->
    <div class="ant-slider-handle" style="bottom: 20%;" role="slider" aria-valuemin="0" aria-valuemax="100" aria-valuenow="20" tabindex="0"></div>
    <div class="ant-slider-handle" style="bottom: 50%;" role="slider" aria-valuemin="0" aria-valuemax="100" aria-valuenow="50" tabindex="0"></div>
  </div>
  <div class="ant-slider ant-slider-vertical ant-slider-with-marks">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track" style="bottom: 0%; height: 37%;"></div><!-- Steps/dots -->
    <div class="ant-slider-step"><span class="ant-slider-dot ant-slider-dot-active" style="bottom: 0%;"></span><span class="ant-slider-dot ant-slider-dot-active" style="bottom: 26%;"></span><span class="ant-slider-dot ant-slider-dot-active" style="bottom: 37%;"></span><span class="ant-slider-dot" style="bottom: 100%;"></span></div><!-- Marks -->
    <div class="ant-slider-mark"><span class="ant-slider-mark-text ant-slider-mark-text-active" style="bottom: 0%;">0°C</span><span class="ant-slider-mark-text ant-slider-mark-text-active" style="bottom: 26%;">26°C</span><span class="ant-slider-mark-text ant-slider-mark-text-active" style="bottom: 37%;">37°C</span><span class="ant-slider-mark-text" style="bottom: 100%;">100°C</span></div><!-- Handle(s) -->
    <div class="ant-slider-handle" style="bottom: 37%;" role="slider" aria-valuemin="0" aria-valuemax="100" aria-valuenow="37" tabindex="0"></div>
  </div>
</div>"
`;
